welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: '=' expected but ';' found.
        return de+die2}
^